# mcmc

./: CMakeLists.txt  configure  mcmcConfig.cmake.in
include/: mcmc_structs.hpp
src/: rwmh.cpp
